# python-criteria

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.husky/: pre-commit
python_criteria/: entity.py  filter.py  memory.py  sqlalchemy.py  visitor.py
